--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.8.1
 Django==5.1
 django-cors-headers==4.4.0
 django-filter==24.3
+django-redis==5.4.0
 djangorestframework==3.15.2
 Markdown==3.7
 pillow==10.4.0
 psycopg2==2.9.9
+redis==5.2.0
 sqlparse==0.5.1
