--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.8.1
+channels==4.2.0
+channels_redis==4.2.1
 Django==5.1
 django-cors-headers==4.4.0
 django-filter==24.3
 django-redis==5.4.0
 djangorestframework==3.15.2
 Markdown==3.7
+msgpack==1.1.0
 pillow==10.4.0
 psycopg2==2.9.10
 redis==5.2.0
