--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,17 @@ services:
       postgres:
         condition: service_healthy
 
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"   # Для HTTP
+      # - "443:443" # Для HTTPS, если потребуется
+    depends_on:
+      - frontend
+      - backend
+
 volumes:
   redis_volume: {}
   pgdata: {}
