--- a/internet-store-frontend/package.json
+++ b/internet-store-frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "draft-js": "^0.11.7",
+    "global": "^4.4.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/draft-js": "^0.11.18",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
