--- a/internet-store-backend/requirements.txt
+++ b/internet-store-backend/requirements.txt
@@ -16,6 +16,7 @@ msgpack==1.1.0
 pillow==10.4.0
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
+pytz===2024.2
 PyYAML==6.0.2
 redis==5.2.0
 sniffio==1.3.1
