--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ REDIS_NAME=REDIS_NAME
 SUPERUSER_NAME=SUPERUSER_NAME
 SUPERUSER_EMAIL=SUPERUSER_EMAIL
 SUPERUSER_PASSWORD=SUPERUSER_PASSWORD
+NGROK_AUTHTOKEN=NGROK_AUTHTOKEN
